# Geosia

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml  design-game.md  design-tech.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config-fastbuild  config-fastbuild.toml
.github/workflows/: pr-check.yml
assets/shaders/: chunk_mesh_main.wgsl
crates/gs_client/: Cargo.toml
crates/gs_client/src/: debugcam.rs  lib.rs  main.rs  voronoi_renderer.rs
crates/gs_client/src/network/: mod.rs
crates/gs_client/src/states/: in_game.rs  loading_game.rs  main_menu.rs  mod.rs
crates/gs_client/src/voxel/: client_plugin.rs  meshgen.rs  mod.rs
crates/gs_common/: Cargo.toml
crates/gs_common/src/: config.rs  dedicated_server.rs  lib.rs  prelude.rs  promises.rs  world_debug_image_renderer.rs
crates/gs_common/src/network/: mod.rs  server.rs  thread.rs  transport.rs
crates/gs_common/src/voxel/: biomes.rs  blocks.rs  decorators.rs  mod.rs  plugin.rs
crates/gs_common/src/voxel/generator/: flat.rs  mod.rs  multi_noise.rs
crates/gs_common/src/voxel/generator/decorator/: mod.rs
crates/gs_common/src/voxel/persistence/: empty.rs  generator.rs  memory.rs  mod.rs
crates/ocg_client/: Cargo.toml
crates/ocg_client/src/: debugcam.rs  flycam.rs  lib.rs  main.rs  voronoi_renderer.rs
crates/ocg_client/src/network/: mod.rs
crates/ocg_client/src/states/: loading_game.rs  main_menu.rs  mod.rs
crates/ocg_client/src/voxel/: meshgen.rs  mod.rs
crates/ocg_common/: Cargo.toml
crates/ocg_common/src/: concurrency.rs  config.rs  lib.rs  prelude.rs  promises.rs
crates/ocg_common/src/network/: client.rs  mod.rs  server.rs  thread.rs  transport.rs
crates/ocg_common/src/voxel/: biomes.rs  blocks.rs  decorators.rs  generator.rs  mod.rs  plugin.rs
crates/ocg_common/src/voxel/generator/: biome_blender.rs  decorator.rs  mod.rs  newgen.rs
crates/ocg_common/src/voxel/noise/: fbm_noise.rs  mod.rs
crates/ocg_common/src/voxel/persistence/: empty.rs  memory.rs  mod.rs
lib/gs_schemas/: Cargo.toml  build.rs
lib/gs_schemas/benches/schemabench/: chunkbench.rs  main.rs  zpackbench.rs
lib/gs_schemas/capnp/: game_types.capnp  network.capnp  rust.capnp  voxel_mesh.capnp
lib/gs_schemas/capnp-generated/: game_types_capnp.rs  network_capnp.rs  voxel_mesh_capnp.rs
lib/gs_schemas/src/: coordinates.rs  direction.rs  lib.rs  mutwatcher.rs  registries.rs  registry.rs
lib/gs_schemas/src/schemas/: mod.rs
lib/gs_schemas/src/voxel/: chunk.rs  chunk_group.rs  mod.rs  voxeltypes.rs
lib/gs_schemas/src/voxel/biome/: mod.rs
lib/gs_schemas/src/voxel/chunk_storage/: array.rs  mod.rs  palette.rs  sparse.rs
lib/gs_schemas/src/voxel/generation/: decorator.rs  fbm_noise.rs  mod.rs
lib/ocg_schemas/: Cargo.toml  build.rs
lib/ocg_schemas/benches/schemabench/: chunkbench.rs
lib/ocg_schemas/capnp/: game_types.capnp  network.capnp  voxel_mesh.capnp
lib/ocg_schemas/capnp-generated/: game_types_capnp.rs  network_capnp.rs  voxel_mesh_capnp.rs
lib/ocg_schemas/src/: coordinates.rs  direction.rs  lib.rs  mutwatcher.rs  physics.rs  range.rs  registries.rs  registry.rs  utils.rs
lib/ocg_schemas/src/schemas/: mod.rs
lib/ocg_schemas/src/voxel/: chunk.rs  chunk_group.rs  chunk_storage.rs  mod.rs  neighborhood.rs  standard_shapes.rs  voxeltypes.rs
lib/ocg_schemas/src/voxel/biome/: biome_map.rs  biome_picker.rs  decorator.rs  mod.rs
lib/ocg_schemas/src/voxel/chunk_storage/: array.rs  palette.rs
lib/ocg_schemas/src/voxel/generation/: blur.rs  condition_sources.rs  fbm_noise.rs  mod.rs  positional_random.rs  rule_sources.rs
