[workspace]
members = ["lib/*", "crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.83"
edition = "2021"
license = "LGPL-3.0-only"
authors = ["Geosia team"]
repository = "https://github.com/GeosiaGame/Geosia"
keywords = ["gaming", "games", "voxel"]
categories = ["games"]

[workspace.dependencies]
# Local, unpublished (versions stay at 0.0.0 to reduce churn)
gs_client = { path = "crates/gs_client", version = "0.0.0" }
gs_common = { path = "crates/gs_common", version = "0.0.0" }
# Local, published
gs_schemas = { version = "0.0.1", path = "lib/gs_schemas" }

# Remote
anyhow = "1.0.86"
arc-swap = "1.7.1"
bitflags = { version = "2.6.0", features = ["bytemuck", "serde"] }
bitvec = { version = "1.0.1", features = ["serde"] }
bytemuck = { version = "1.16.1", features = [
    "extern_crate_alloc",
    "extern_crate_std",
    "min_const_generics",
    "derive",
    "zeroable_maybe_uninit",
    "zeroable_atomics",
] }
capnp = { version = "0.20.3" }
capnp-futures = "0.20.1"
capnp-rpc = "0.20.2"
capnpc = "0.20.1"
clap = { version = "4.5.8", features = ["derive"] }
either = "1.13.0"
futures = "0.3.30"
glam = { version = "0.29.2", features = [
    "bytemuck",
    "serde",
] } # Keep in sync with bevy
hashbrown = { version = "0.15.2", features = ["serde"] }
image = "0.25.1" # Keep in sync with bevy
itertools = "0.13.0"
kstring = { version = "2.0.0", features = ["serde"] }
lru = "0.12.3"
noise = "0.9.0"
once_cell = "1.19.0"
quinn = { version = "0.11.2", features = ["futures-io", "runtime-tokio"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_xoshiro = "0.6.0"
rcgen = "0.13.1"
rgb = { version = "0.8.40", features = ["serde"] }
rustls = { version = "0.23.11" }
rustyline = "15.0.0"
serde = { version = "1.0.203", features = ["derive"] }
smallvec = { version = "1.13.2", features = [
    "serde",
    "const_generics",
    "const_new",
    "write",
    "union",
] }
smart-default = "0.7.1"
socket2 = "0.5.8"
spade = { version = "2.9.0", features = ["serde"] }
static_assertions = "1.1.0"
thiserror = "2.0.3"
thread_local = "1.1.8"
tokio = { version = "1.38.0", features = [
    "sync",
    "rt",
    "net",
    "rt-multi-thread",
    "io-util",
    "time",
    "macros",
] }
tokio-util = { version = "0.7.11", features = ["compat", "io-util"] }
tracing = "0.1.40"
uuid = { version = "1.9.1", features = [
    "fast-rng",
    "serde",
    "bytemuck",
    "v4",
    "v6",
] }
zorder = "0.2.2"

# Remote, bevy plugins
bevy_egui = "0.31.1"

# Remote, testing
criterion = { version = "0.5.1", features = ["html_reports"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[workspace.dependencies.bevy]
version = "0.15.0"
default-features = false
# Extra features are used in gs_client on top of these common ones
features = [
    # Default Bevy functionality:
    "bevy_asset",            # Assets management
    "animation",             # Animation support
    "android_shared_stdcxx", # For Android builds, use shared C++ library
    "multi_threaded",
    "bevy_state",

    # Extra Bevy functionality:
    "serialize", # Support for `serde` Serialize/Deserialize

    # Development/Debug features:
    # "dynamic_linking", # Dynamic linking for faster compile-times
    # "trace", # Enable tracing for performance measurement
    # "detailed_trace",  # Make traces more verbose
    # "trace_tracy",     # Tracing using `tracy`
    # "trace_chrome",    # Tracing using the Chrome format
]

[workspace.dependencies.bevy_math]
version = "0.15.0"
default-features = false
features = [
    "serialize", # Support for `serde` Serialize/Deserialize
]

[workspace.dependencies.bevy_reflect]
version = "0.15.0"
features = ["smallvec", "glam", "uuid"]

[profile.dev]
opt-level = 1
debug-assertions = true
debug = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 1
opt-level = 3
codegen-units = 1
lto = "thin"
incremental = false
