[package]
name = "ocg_client"
version = "0.0.0"
description = "OpenCubeGame client"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Local
ocg_schemas.workspace = true
ocg_common.workspace = true
# Remote

[dependencies.bevy]
workspace = true
features = [
    # Default Bevy functionality:
    "bevy_audio",         # Builtin audio
    "bevy_gilrs",         # Gamepad input support
    "bevy_scene",         # Scenes management
    "bevy_winit",         # Window management
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_gltf",          # GLTF 3D assets format support
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "tonemapping_luts",   # Support different camera Tonemapping modes (embeds extra data)
    "x11",                # Linux: Support X11 windowing system

    "ktx2",   # Preferred format for GPU textures
    "zstd",   # ZSTD compression support in KTX2 files
    "vorbis", # Audio: OGG Vorbis

    # Extra Bevy functionality:
    "wayland",              # Linux: Support Wayland windowing system
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "accesskit_unix",       # AccessKit integration for UI Accessibility

    # Development/Debug features:
    # "wgpu_trace",      # WGPU/rendering tracing
]
