[package]
name = "ocg_common"
version = "0.0.0"
description = "OpenCubeGame shared client+server code"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Local
ocg_schemas.workspace = true
# Remote
anyhow.workspace = true
bevy.workspace = true
