[package]
name = "ocg_schemas"
version = "0.0.1"
description = "Disk and network data serialization schemas for the OpenCubeGame"

authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/OpenCubeGame/OpenCubeGame/tree/dev/lib/gs_schemas"
edition = "2021"

[features]
default = []
regenerate-capnp = []

[[bench]]
name = "schemabench"
harness = false

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
bitflags.workspace = true
bitvec.workspace = true
bevy_math.workspace = true
bevy.workspace = true
capnp.workspace = true
either.workspace = true
hashbrown.workspace = true
itertools.workspace = true
kstring.workspace = true
once_cell.workspace = true
rgb.workspace = true
serde.workspace = true
serde_traitobject.workspace = true
smallvec.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
noise.workspace = true
typetag.workspace = true
dyn-clone.workspace = true
lazy_static.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
rand_pcg.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true

[build-dependencies]
capnpc.workspace = true
